# thu-cg-final

./: .gitignore  CMakeLists.txt  README.md  Spherical.m  distribution.m  kNear.m  kNear2.m  untitled.m
data/demo_data/: circle1000.txt
data/size-circle/: circle100.txt  circle10000.txt  circle100000.txt  circle20000.txt  circle25.txt  circle40000.txt  circle5.txt  circle50.txt  circle80000.txt
data/size-diagonal/: diagonal100.txt  diagonal10000.txt  diagonal100000.txt  diagonal20000.txt  diagonal200000.txt  diagonal25.txt  diagonal40000.txt  diagonal5.txt  diagonal50.txt  diagonal80000.txt
data/size-random/: random1.txt  random100.txt  random10000.txt  random100000.txt  random20000.txt  random25.txt  random40000.txt  random5.txt  random50.txt  random80000.txt
data_ans_matlab/: Spherical2.m  kNear.m
delete_at_final/: C++demo大纲.md
demo_data/: diagonal1000.txt  random1000.txt
fig/: distribution_time.eps  k_time.eps  n_time.eps  n_time_r.eps  r_time.eps  random_time.eps
include/: kdtree.h  utils.h
js/: index.html  style.css
lib/: CMakeLists.txt
src/: CMakeLists.txt  README.md  main.cpp  utils.h
src/src/: CMakeLists.txt
